policies/allowed-repos.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: example
spec:
  # match <object>: lets you configure which resources are in scope for this
  # constraint. For more information, see the Constraint match section of the
  # Anthos Config Management documentation:
  # https://cloud.google.com/anthos-config-management/docs/reference/match
  match:
    kinds:
    - apiGroups:
      - ""
      kinds:
      - Pod
  parameters:
    # repos <array>: The list of prefixes a container image is allowed to have.
    repos:
      - northamerica-northeast1-docker.pkg.dev/
      - gcr.io/
      - gke.gcr.io/
      - busybox
      - redis
